--- a/bio/index.html
+++ b/bio/index.html
@@ -101,7 +101,40 @@
           </header>
 
           <article>
+            
+            <p align="justify">
+              Since childhood, I've had a deep passion for computer programming. Encouraged by my brother, I honed my skills by taking on enjoyable tasks like developing board games and creating console applications to solve mathematical problems. Mathematics also fascinated me, and my family and friends recognized me as a skilled programmer. This path nurtured my eagerness to tackle challenges, and extensive problem-solving in fields like "Number Theory" and "Geometry" further sharpened my abilities.
+            </p>
 
+            <p align="justify">
+              Throughout high school, I consistently excelled in mathematics, achieving notable accomplishments such as participating in the prestigious "Mathematic Olympiad" and earning recognition in the national Iranian Olympiad in 2008. Continuing my academic journey, I pursued electrical engineering as my major in college, focusing on the electronic domain from 2010 to 2014. During this period, my passion for programming and designing innovative solutions grew. I became proficient in logic-based system design, undertaking numerous projects using platforms like Proteus, microcontrollers such as ATMEGA AVRs and PICs, as well as MATLAB. My dedication paid off, as I achieved the highest math score in the national MSc exam for electrical engineers in 2014.
+            </p>
+
+            <p align="justify">
+              For my MSc degree in electrical engineering, I specialized in the field of communication systems at Amirkabir University of Technology. My thesis titled "Sparse Modeling Method based on Machine Learning" delved into machine learning theory, specifically addressing the ambiguity of relevance vector machines in low-volume data spaces. Throughout this period (2014-2016), I extensively studied books on machine learning and image processing, with Bishop's "Pattern Recognition and Machine Learning" helping me gain advanced knowledge in the field. As a result, I successfully completed numerous small projects in image processing and machine learning.
+            </p>
+
+            <p align="justify">
+              In 2016, I began my professional journey as a junior software engineer and signal processing algorithm designer at "Farateif Pouya" a pivotal moment in my career. Thriving in a collaborative and enjoyable work environment, I quickly progressed, assuming greater responsibilities within the company. As a software developer proficient in C++ and Qt, I focused on creating user interfaces and processing cores for a wide range of communication and signal processing systems. Additionally, I made valuable contributions to FPGA-based communication projects, utilizing "System Generator" and occasionally VHDL. This period allowed me to expand my expertise in software and hardware development.
+            </p>
+
+            <p align="justify">
+              Furthermore, in 2017, I embarked on a Ph.D. program at Amirkabir University of Technology, specializing in the estimation of transmission quality for fiber optic communication links using deep learning techniques. Balancing the demands of my work and Ph.D. studies proved challenging, requiring great dedication and commitment.
+            </p>
+
+            <p align="justify">
+              In 2019, I encountered a challenge while serving as a project manager for a different project. With my expertise in C++ and FPGA development, I was called upon to assist with a GPU-based project. Intrigued by the fascinating combination of hardware and software, CUDA captured my interest. Subsequently, I successfully completed three CUDA-based projects at "Farateif Pouya."
+            </p>
+
+            <p align="justify">
+              While working at Farateif Pouya, we engaged in contracts with other companies and employers, catering to their unique requirements. Some employers proposed communication systems based on AI, and their suggestions led to the establishment of my own company, "Sunyar," in 2020. With notable projects in deep learning-based automatic modulation recognition and CUDA-based satellite receivers, I earned their trust, and the number of project proposals increased over time. As the workload grew, I expanded the team to ten employees and managed multiple projects concurrently. This experience proved immensely challenging and rewarding.
+            </p>
+
+            <p align="justify">
+              At the end of 2022, my wife and I made the decision to immigrate to Canada. She was accepted as a master's student at the University of British Columbia, and in May 2023, we relocated to Vancouver.
+            </p>
+
+            <h6 class="title font-weight-bold ml-1 ml-md-4"> I am now actively seeking employment opportunities in Vancouver or remote positions with companies in Canada. </h6>
           </article>
 
         </div>
