--- a/bio/index.html
+++ b/bio/index.html
@@ -134,7 +134,7 @@
               At the end of 2022, my wife and I made the decision to immigrate to Canada. She was accepted as a master's student at the University of British Columbia, and in May 2023, we relocated to Vancouver.
             </p>
 
-            <h6 class="title font-weight-bold ml-1 ml-md-4"> I am now actively seeking employment opportunities in Vancouver or remote positions with companies in Canada. </h6>
+            <h6 class="title font-weight-bold"> I am now actively seeking employment opportunities in Vancouver or remote positions with companies in Canada. </h6>
           </article>
 
         </div>
