--- a/bio/index.html
+++ b/bio/index.html
@@ -74,6 +74,9 @@
                 <a class="nav-link" href="/cv/">CV</a>
               </li>
               <li class="nav-item ">
+                <a class="nav-link" href="/projects/">Projects</a>
+              </li>
+              <li class="nav-item ">
                 <!-- <a class="nav-link" href="/publications/">Publications</a> -->
               </li>
             </ul>
