--- a/bio/index.html
+++ b/bio/index.html
@@ -67,18 +67,19 @@
               
 
               <!-- Other pages -->
+              <li class="nav-item">
+              <a class="nav-link" href="/cv/">CV</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/projects/">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pub/">Research & Publications</a>
+              </li>
               <li class="nav-item active">
                 <a class="nav-link" href="/bio/">Bio<span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="/cv/">CV</a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="/projects/">Projects</a>
-              </li>
-              <li class="nav-item ">
-                <!-- <a class="nav-link" href="/publications/">Publications</a> -->
-              </li>
+             
             </ul>
           </div>
         </div>
